--- a/templates/posts.html
+++ b/templates/posts.html
@@ -10,7 +10,7 @@
     <p1>Список пуст</p1>
     {% else %}
 {% for p in posts %}
-<p>{{p.title}}</a></p>
+<p><a href="{{ url_for('show_post', id=p.id)}}">{{p.title}}</a></p>
 {% endfor %}
     {% endif %}
 </div>
