--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 {{ super() }}
 <hr>
 
-<table border="0" align="right" cellpadding="5" class="title-table">
+<table border="0" align="center" cellpadding="5" class="title-table">
 <tr>
     <th>О сайте</th>
 </tr>
@@ -17,7 +17,6 @@
     </td>
 </tr></table>
 
-<h2>Список блогеров</h2>
 <ul class="list-posts">
 {% for w in writers %}
     {% if not w.is_admin %}
@@ -28,25 +27,3 @@
 {% endfor %}
 </ul>
 {% endblock %}
-
-
-<!--ul.list-posts {-->
-<!--	list-style: none;-->
-<!--	margin: 0;-->
-<!--	padding: 5;-->
-<!--	max-width: 350px;-->
-<!--	margin-left: 4%;-->
-<!--}-->
-<!--ul.list-posts li {-->
-<!--	margin: 20px 0 0 0;-->
-<!--	border: 1px solid #4B0082;-->
-<!--}-->
-<!--ul.list-posts .title {-->
-<!--	margin: 0;-->
-<!--	padding: 5px;-->
-<!--	background: #E6E6FA;-->
-<!--}-->
-<!--ul.list-posts .annonce {-->
-<!--	margin: 0;-->
-<!--	padding: 10px 5px 10px 5px;-->
-<!--}-->
