--- a/templates/authors_2.html
+++ b/templates/authors_2.html
@@ -3,16 +3,15 @@
 {% block content %}
 {{ super() }}
 
-<h1>Список постов</h1>
+<h1>Список авторов</h1>
 <div class="lists">
     {% if authors %}
     {% for a in authors %}
     <p class="title"><a href="{{ url_for('show_authors_2', id=a.id)}}">{{a.id}} {{a.login}}</a></p>
     {% if a.id == a_id %}
-    <p><a>{{a_id}}</a></p>
     <div>
         {% for pp in posts %}
-        <p><a href="{{ url_for('show_post', id=pp.id)}}">{{pp.title}} {{pp.text}}</a></p>
+        <p><a href="{{ url_for('show_post', id=pp.id)}}">{{pp.title}}</a></p>
         {% endfor %}
     </div>
     {%endif%}
