--- a/templates/change_post.html
+++ b/templates/change_post.html
@@ -5,10 +5,10 @@
 {% for cat, msg in get_flashed_messages(True) %}
 <div class="flash {{cat}}">{{msg}}</div>
 {% endfor %}
-<form action="{{url_for('add_post')}}" method="post" class="form-contact">
+<form action="{{url_for('change_post', id_post=post.id, id_auth=author.id)}}" method="post" class="form-contact">
     <p><label>Название статьи: </label> <input type="text" name="title" value="{{post.title}}" requied/>
-    <p><label>Текст статьи: </label> <input type="text" name="text" value="{{post.text}}" requied/>
-    <p><textarea name="post" rows=7 cols=40></textarea>
+    <p><label>Текст статьи: </label><input type="text" name="text" value="{{post.text}}" requied/>
+<!--    <p><textarea name="text" rows=7 cols=40>{{post.text}}</textarea>-->
     <p><input type="submit" value="Подтвердить изменения"/>
 </form>
 
