--- a/templates/post.html
+++ b/templates/post.html
@@ -3,12 +3,13 @@
 {% block content %}
 {{ super() }}
 
-<form id="deletion" action="{{ url_for('delete_post', id=post.id) }}" method="post">
-    <p><input type="submit" value="Удалить статью"/></p>
-</form>
 <p>Название статьи: {{post.title}} </p>
 <p>Автор статьи: {{author.login}} </p>
 <p>{{post.text}} </p>
 
+<form id="deletion" action="{{ url_for('delete_post', id_post=post.id, id_auth=author.id) }}" method="post">
+    <p><input type="submit" value="Удалить статью"/></p>
+</form>
+<p><a href="{{ url_for('change_post', id_post=post.id, id_auth=author.id) }}">Редактироввать статью</a></p>
 
 {% endblock %}
