--- a/templates/base.html
+++ b/templates/base.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link type="text/css" href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet" />
-{% block title -%}
-{% if title %}
-	<title>Блог- {{title}}</title>
-{% else %}
-	<title>Блог</title>
-{% endif %}
-{% endblock %}
+    <link type="text/css" href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet"/>
+    {% block title -%}
+    {% if title %}
+    <title>Блог- {{title}}</title>
+    {% else %}
+    <title>Блог</title>
+    {% endif %}
+    {% endblock %}
 </head>
 <body>
 {% block content -%}
-	{%- block mainmenu -%}
+{%- block mainmenu -%}
 <ul class="mainmenu">
     <li><a href="{{url_for('show_all_posts')}}">Посты</a></li>
-	    <li><a href="{{url_for('show_authors')}}">Авторы</a></li>
-	    <li><a href="{{url_for('show_topics')}}">Темы</a></li>
-
+    <li><a href="{{url_for('show_authors')}}">Авторы</a></li>
+    <li><a href="{{url_for('show_topics')}}">Темы</a></li>
+    <li><a href="{{url_for('search_post')}}">Поиск</a></li>
 </ul>
-	{% endblock mainmenu -%}
+{% endblock mainmenu -%}
 <div class="clear"></div>
-	{% if title -%}
+{% if title -%}
 <h1>{{title}}</h1>
-	{% else -%}
+{% else -%}
 
 <div class="content1">
-<h1>Блог</h1>
-	</div>
-	{% endif -%}
+    <h1>Блог</h1>
+</div>
+{% endif -%}
 
 <div class="content">
-{% endblock -%}
+    {% endblock -%}
 </div>
 </body>
 </html>
