--- a/templates/posts.html
+++ b/templates/posts.html
@@ -5,7 +5,7 @@
 
 <h1>Список статей</h1>
 <div class="lists">
-    <li><a href="{{url_for('add_post')}}">Добавить статью</a></li>
+    <li><a class="link" href="{{url_for('add_post')}}">Добавить статью</a></li>
 {% if not posts %}
     <p1>Список пуст</p1>
     {% else %}
